# SmearglePaper

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  MCP.md  WECHAT.md
scripts/: conda-python
src/: __init__.py
src/mcp_server/: __init__.py  server.py
src/smearglepaper/: __init__.py  cli.py  collector.py  config.py  cover.py  llm.py  models.py  quality.py  ranker.py  reader.py  renderer.py  storage.py  wechat.py  workflow.py
tests/: test_core.py
